<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:padding="@dimen/estore_item_margin_5dp"
        android:textStyle="bold"
        android:text="@string/forgot_your_password"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="@dimen/estore_item_margin_10dp"
        android:text="@string/forget_password_text_description"/>

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/edt_forget_email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/forget_password_email"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_forget_password_submit"
        android:layout_margin="10dp"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/corner_radius_button"
        android:text="@string/btn_title_forget_password_submit"/>

    <FrameLayout
        android:visibility="gone"
        android:id="@+id/submit_progress_bar"
        android:layout_margin="10dp"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@color/buttonColorDeliverBackground">

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </FrameLayout>

</LinearLayout>
