<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.VericationCodeActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/view_toolbar" />

    <RelativeLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:background="@color/white">


        <LinearLayout
            android:id="@+id/layout_input_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_information"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/list_item_margin_24dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <RelativeLayout

                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/list_item_margin_24dp">

                <EditText
                    android:id="@+id/edit_text_pin_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/backgroud_text_field_border"
                    android:inputType="number"
                    android:padding="@dimen/list_item_margin_16dp"
                    android:textAlignment="center"
                    tools:ignore="Autofill,LabelFor" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_input_code"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_resend_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_text_pin_code"
                android:layout_centerHorizontal="true"
                android:text="@string/did_not_get_the_code"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:visibility="gone"
                tools:ignore="ObsoleteLayoutParam" />

            <TextView
                android:id="@+id/txt_code_countdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_text_pin_code"
                android:layout_centerHorizontal="true"
                android:text="@string/code_can_be_resend_in"
                android:textAlignment="center"
                tools:ignore="ObsoleteLayoutParam" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorDeliverBorderWhite"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/list_item_margin_15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\@2017 The Speed Delivery mad in Cambodia."
                android:textSize="@dimen/simple_font_size" />

            <TextView
                android:id="@+id/txt_term"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:text="Term and Condition"
                android:textColor="@color/green"
                android:textSize="@dimen/simple_font_size" />

            <TextView
                android:id="@+id/txt_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:text="Privacy Policy"
                android:textColor="@color/green"
                android:textSize="@dimen/simple_font_size" />

            <TextView
                android:id="@+id/txt_version"
                style="@style/TextViewHeaderA4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Version 1.0"
                android:textSize="@dimen/simple_font_size" />
        </LinearLayout>


    </RelativeLayout>

    <FrameLayout
        android:id="@+id/container_float_loading"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@color/colorTransparency"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <include layout="@layout/view_progress_bar_ii" />

            <TextView
                android:id="@+id/txt_container_loading_label"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin_length_5"
                android:gravity="center"
                android:text="@string/log_in"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>
    </FrameLayout>


</RelativeLayout>